# webrtc_vad

./: CMakeLists.txt  README.md
common_audio/signal_processing/: downsample_fast.c  min_max_operations.c  spl_init.c  splitting_filter.c
common_audio/signal_processing/include/: signal_processing_library.h
common_audio/vad/: vad_core.h  vad_filterbank.c  vad_sp.c
modules/audio_processing/vad/: standalone_vad.cc
rtc_base/: checks.h
test/: test.cpp
